event: fix background color in dark mode

--- a/webapp/src/styles/theme-dark.scss
+++ b/webapp/src/styles/theme-dark.scss
@@ -146,3 +146,7 @@ button {
     color: lawngreen;
   }
 }
+
+.bg-theme {
+  @extend .bg-dark;
+}
